packages/typ/tests/fixtures/diagnostics/0568_functor_call_abstract_function_int_03.ml.expected
File "0568_functor_call_abstract_function_int_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0568_functor_call_abstract_function_int_03 is not a valid module name.

File "0568_functor_call_abstract_function_int_03.ml", line 7, characters 15-16:
7 |   let y = X.id 2
                   ^
Error: The constant 2 has type int but an expression was expected of type X.t
